--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a former cheesemonger and horror film expert</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Portland, Maine</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Cooking, reading, and hiking</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Something where I can travel, solve interesting problems and work with all kinds of different people.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Everywhere. But more recently, in a big city like New York or Los Angeles.</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>Details here...</p>
     </section>
