updating details again

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am a former cheesemonger and horror film expert</p>
+      <p>I am a former cheesemonger and with a film and literature background</p>
       <h1>Where I'm From</h1>
       <p>Portland, Maine</p>
       <h1>What are your favorite hobbies?</h1>
@@ -25,9 +25,9 @@
       <h1>What's your dream job?</h1>
       <p>Something where I can travel, solve interesting problems and work with all kinds of different people.</p>
       <h1>Where do you live?</h1>
-      <p>Everywhere. But more recently, in a big city like New York or Los Angeles.</p>
+      <p>In Portland, Maine. But I've lived in the mountains of Utah and in Spain. Ole!</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I'm attracted to the analytical aspects of it and I've always been curious about computer science.</p>
     </section>
 
     <footer id="footer">
